--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="css/main.css" media="screen, projection" rel="stylesheet" type="text/css">
 <body>
     <div id="homescreen">
-	    <h1>Welcome on SteamOX</h1>
+        <h1>Welcome on SteamOX</h1>
         <button id="create-party">Create a new game</button>
         <button id="join">Join a game</button>
     </div>
@@ -17,6 +17,7 @@
             <input id="partycode" value=""><button type="submit" class="add-button">Join</button>
         </form>
     </div>
+    <script type="text/javascript" src="js/config.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
