Added screen manager

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width">
     <link href="css/main.css" media="screen, projection" rel="stylesheet" type="text/css">
 <body>
-    <div id="homescreen">
+    <div id="homescreen" class="screen">
         <h1>Welcome on SteamOX</h1>
         <button id="create-party">Create a new game</button>
         <button id="join">Join a game</button>
     </div>
-    <div id="joinscreen" style="display:none;">
+    <div id="joinscreen" class="screen">
         <h1>Join a party</h1>
         <h4>Please enter the party code</h4>
         <form id="partycodeform">
