--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </form>
     </div>
     <script type="text/javascript" src="js/config.js"></script>
+    <script type="text/javascript" src="js/user.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
