--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <link href="css/main.css" media="screen, projection" rel="stylesheet" type="text/css">
 <body>
     <div id="homescreen" class="screen">
-        <h1>Welcome on SteamOX</h1>
-        <button id="create-party">Create a new game</button>
-        <button id="join">Join a game</button>
+        <h1>SteamOX</h1>
+        <button id="create-party">Create</button>
+        <button id="join">Join</button>
+    </div>
+    <div id="createscreen" class="screen">
+        <form action="" id="create-form" onsubmit="return false;">
+            <input type="text" id="create-room-name" placeholder="Room Name" required>
+            <button>Create</button>
+        </form>
     </div>
     <div id="joinscreen" class="screen">
         <h1>Join a party</h1>
