--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
             <input id="partycode" value=""><button type="submit" class="add-button">Join</button>
         </form>
     </div>
+    <div id="waitingscreen" class="screen">
+        <p>Waiting for a server response...</p>
+        <img src="img/ajax_loading.gif" />
+    </div>
     <script type="text/javascript" src="js/config.js"></script>
     <script type="text/javascript" src="js/user.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
