Replaced the loading spinner by a new one

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <div id="waitingscreen" class="screen">
         <p>Waiting for a server response...</p>
-        <img src="img/ajax_loading.gif" />
+        <img src="img/loading.png">
     </div>
     <script type="text/javascript" src="js/config.js"></script>
     <script type="text/javascript" src="js/user.js"></script>
