--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <h1>Join a party</h1>
         <h4>Please enter the party code</h4>
         <form id="partycodeform">
-            <input id="partycode" value=""><button type="submit" class="add-button">Join</button>
+            <input type="text" id="join-room-name" placeholder="Room Name" required>
+            <button type="submit">Join</button>
         </form>
     </div>
     <div id="waitingscreen" class="screen">
