--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="joinscreen" class="screen">
         <h1>Join a party</h1>
         <h4>Please enter the party code</h4>
-        <form id="partycodeform">
+        <form id="join-room-form">
             <input type="text" id="join-room-name" placeholder="Room Name" required>
             <button type="submit">Join</button>
         </form>
