Adding button to start game

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <form role="dialog" data-type="action" onsubmit="return false;" id="waiting-menu">
             <menu>
-                <button id="start-game">Start game</button>
+                <button id="startgame">Start game</button>
             </menu>
         </form>
         <img src="img/loading.png">
