--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <menu>
                 <button id="create-party">Create</button>
                 <button id="join">Join</button>
+                <button id="settings">Settings</button>
                 <button id="about">About</button>
             </menu>
         </form>
@@ -40,6 +41,15 @@
         </form>
         <img src="img/loading.png">
     </div>
+    <div id="settings-screen" class="screen">
+        <h2>Settings</h2>
+
+        <form role="dialog" data-type="action" onsubmit="return false;" id="settings-forms">
+            <input id="setting-username" value="Firefox" placeholder="Username">
+            <button id="btn-save">Save</button>
+        </form>
+    </div>    
+    
     <script type="text/javascript" src="js/config.js"></script>
     <script type="text/javascript" src="js/user.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
