UX : Using process tag

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </div>
     <div id="waitingscreen" class="screen">
         <h3>Waiting for others players...</h3>
+        <progress></progress>
         <ul id="room-list-players"></ul>
 
         <form role="dialog" data-type="action" onsubmit="return false;" id="waiting-menu">
@@ -39,7 +40,6 @@
                 <button id="startgame">Start game</button>
             </menu>
         </form>
-        <img src="img/loading.png">
     </div>
     <div id="settings-screen" class="screen">
         <h2>Settings</h2>
