Fix settings username input

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div id="settings-screen" class="screen">
         <h2>Settings</h2>
 
-        <form role="dialog" data-type="action" onsubmit="return false;" id="settings-forms">
+        <form onsubmit="return false;" id="settings-forms">
             <input id="setting-username" value="Firefox" placeholder="Username">
             <button id="btn-save">Save</button>
         </form>
