--- a/index.html
+++ b/index.html
@@ -49,8 +49,12 @@
             <button id="btn-save">Save</button>
         </form>
     </div>    
+    <div id="demineur" class="screen">
+         <div id="grille"></div>
+    </div>
     
     <script type="text/javascript" src="js/config.js"></script>
+    <script type="text/javascript" src="js/games/demineur.js"></script>
     <script type="text/javascript" src="js/user.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </body>
