--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <div id="settings-screen" class="screen">
         <h2>Settings</h2>
 
-        <form onsubmit="return false;" id="settings-forms">
-            <input id="setting-username" value="Firefox" placeholder="Username">
+        <form id="settings-form">
+            <input id="setting-username" value="" placeholder="Username" required>
             <button id="btn-save">Save</button>
         </form>
     </div>    
